Fix: Load more button spacing issue

--- a/src/pages/MoviesPage/MovieList/MovieList.module.css
+++ b/src/pages/MoviesPage/MovieList/MovieList.module.css
@@ -1,5 +1,4 @@
 
 .movieCardContainer {
-  min-height: 40rem;
-  position:   relative;
+  position: relative;
 }
